syntax = "proto3";

package proto;

option go_package = "origin/internal/network/pb";

// ============================================================================
// Client -> Server Packets
// ============================================================================

// Auth packet - sent when client connects
message C2SAuth {
  string token = 1;
}

// Move packet - player movement request
message C2SMapClick {
  int32 x = 1;
  int32 y = 2;
  int32 btn = 3;
}

// Click on object
message C2CObjectClick {
  int64 id = 1;
  int32 x = 2;
  int32 y = 3;
  // mouse button and key modifiers
  int32 btn = 4;
}

// Chat packet - send chat message
message C2SChat {
  string message = 1;
  ChatChannel channel = 2;

  enum ChatChannel {
    CHAT_CHANNEL_LOCAL_AREA = 0;
    CHAT_CHANNEL_PARTY = 1;
  }
}


// ============================================================================
// Server -> Client Packets
// ============================================================================

// Auth response
message S2CAuthResult {
  bool success = 1;
  string error_message = 2;
  uint64 character_id = 3;
}

// First init world packet
message S2CWorldBootstrap {
  int32 region = 1;
  int32 layer = 2; // 0, -1, -2
  int32 player_entity_id = 3;
  uint64 world_tick = 4;
  int32 chunk_tile_size = 5;  // const -> CHUNK_SIZE
  int32 coord_per_tile = 6 ; // const -> COORD_PER_TILE
}

// When all init data sent and can begin render
message S2CInitialDataComplete {}

// Entity spawn
message S2CObjectAdd {
  uint64 entity_id = 1;
  int32 type_id = 2;
  int32 x = 3;
  int32 y = 4;
  // which way the object is turned
  int32 heading = 5;
  // resource path for render
  string resource = 6;

}

// Entity despawn
message S2CObjectDelete {
  uint64 entity_id = 1;
}

// Entity position update
message S2CObjectMove {
  uint64 entity_id = 1;
  int32 x = 2;
  int32 y = 3;
}

// Inventory update (open inventory window if not exists on the screen, update content if opened)
message S2CInventory {
  uint64 id = 1;
  string title = 2;
  int32 width = 3;
  int32 height = 4;
  repeated InventorySlot slots = 5;

  message InventorySlot {
    uint32 item_id = 1;
    int32 x = 2;
    int32 y = 3;
    int32 width = 4;
    int32 height = 5;
    string icon = 6;
    uint32 quality = 7;
  }
}

// Chunk data
message S2CChunk {
  int32 chunk_x = 1;
  int32 chunk_y = 2;
  bytes tile_data = 3;  // compressed tile data
  repeated S2CObjectAdd entities = 4;
}

// Chat message from server
message S2CChatMsg {
  uint64 sender_id = 1;
  string sender_name = 2;
  string message = 3;
  C2SChat.ChatChannel channel = 4;
}

// Error message
message S2CError {
  ErrorCode code = 1;
  string message = 2;

  enum ErrorCode {
    ERROR_CODE_UNSPECIFIED = 0;
    ERROR_CODE_INVALID_PACKET = 1;
    ERROR_CODE_NOT_AUTHENTICATED = 2;
    ERROR_CODE_INVALID_ACTION = 3;
    ERROR_CODE_TARGET_NOT_FOUND = 4;
    ERROR_CODE_INSUFFICIENT_RESOURCES = 5;
    ERROR_CODE_RATE_LIMITED = 6;
  }
}

// World state snapshot
message S2CWorldState {
  uint64 tick = 1;
  uint64 server_time = 2;
}
